unpackaged/main/default/objects/ProjectTask__c/ProjectTask__c.object-meta.xml
<CustomObject>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>