unpackaged/main/default/objects/ProjectTask__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <externalId>true</externalId>
    <label>Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>