unpackaged/main/default/objects/ProjectTask__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserTasks</relationshipName>
    <type>Lookup</type>
</CustomField>