unpackaged/main/default/objects/ProjectTask__c/fields/Days_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_Completed__c</fullName>
    <label>Days Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>