unpackaged/main/default/objects/ProjectTask__c/fields/Days_Predicted__c.field-meta.xml
<CustomField>
    <fullName>Days_Predicted__c</fullName>
    <label>Days Predicted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>