unpackaged/main/default/objects/ProjectTask__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Milestone is not valid. Please select a Milestone that is part of the selected Project and is not marked as Complete.</errorMessage>
        <filterItems>
            <field>ProjectMilestone__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProjectMilestone__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>