unpackaged/main/default/objects/ProjectTask__c/fields/PriorityIcon__c.field-meta.xml
<CustomField>
    <fullName>PriorityIcon__c</fullName>
    <formula>CASE( Priority__c,
"High", IMAGE("/img/msg_icons/error16.png", "High"),
"")</formula>
    <label>Icon</label>
    <type>Text</type>
</CustomField>