unpackaged/main/default/objects/ProjectTask__c/fields/StatusColour__c.field-meta.xml
<CustomField>
    <fullName>StatusColour__c</fullName>
    <formula>CASE( Status__c,
"On Hold", IMAGE("/img/samples/color_red.gif", "Red", 10, 40),
"Waiting on someone else", IMAGE("/img/samples/color_red.gif", "Red", 10, 40),
"In Progress", IMAGE("/img/samples/color_yellow.gif", "Yellow", 10, 40),
"Completed", IMAGE("/img/samples/color_green.gif", "Green", 10, 40),
"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour</label>
    <type>Text</type>
</CustomField>