unpackaged/main/default/objects/ProjectTask__c/listViews/MyCompletedTasksThisWeek.listView-meta.xml
<ListView>
    <fullName>MyCompletedTasksThisWeek</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>DueDate__c</columns>
    <columns>Days_Completed__c</columns>
    <columns>Days_Predicted__c</columns>
    <columns>Hours__c</columns>
    <columns>Status__c</columns>
    <columns>StatusColour__c</columns>
    <columns>Priority__c</columns>
    <columns>ActivityId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>DueDate__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Completed Tasks This Week</label>
</ListView>