unpackaged/main/default/objects/ProjectTask__c/listViews/MyOpenTasks.listView-meta.xml
<ListView>
    <fullName>MyOpenTasks</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>DueDate__c</columns>
    <columns>Hours__c</columns>
    <columns>Status__c</columns>
    <columns>StatusColour__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
    </filters>
    <label>My Open Tasks</label>
</ListView>